kubernetes/features/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - name: node-container
        image: oscargomezgonzalezz/node:sinApi
        ports:
        - containerPort: 3500
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node-server
  ports:
    - protocol: TCP
      port: 3500 #accessible by other services within the same cluster
      targetPort: 3500 #any traffic received by the Service on "port" will be forwarded to target port, in this case
                        # its 3500 as our server is listening in that port
      #nodePort: 30007 #nodeport range from 30000 to 32000, we only use nodeport with backedn for testing
