kubernetes/features/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-server
  template:
    metadata:
      labels:
        app: react-server
    spec:
      containers:
      - name: react-container
        image: oscargomezgonzalezz/react:1.0.7
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"

---

apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-server
  ports:
    - protocol: TCP
      port: 80 #accessible by other services within the same cluster
      targetPort: 80 #any traffic received by the Service on "port" will be forwarded to target port, in this case
                        # its 3500 as our server is listening in that port
