kubernetes/features/ingress-react-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-path
  # we have to create a different ingress file since react supports
  # rewriting and routing in other way(must be direct routing, $2 not allowed)
spec:
  ingressClassName: nginx
  rules:
  - host: public.my-services.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
