kubernetes/features/ingress-react.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-path
spec:
  ingressClassName: nginx
  rules:
  - host: public.my-services.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
